force-app/main/default/objects/Process_Routing__c/Process_Routing__c.object-meta.xml
<CustomObject>
    <label>Process Routing</label>
    <nameField>
        <label>Process Routing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Routings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>