force-app/main/default/objects/Process_Routing__c/fields/Direct_Labour_Cost__c.field-meta.xml
<CustomField>
    <fullName>Direct_Labour_Cost__c</fullName>
    <label>Direct Labour Cost</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>