force-app/main/default/objects/Process_Routing__c/fields/Ext_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ext_Cost__c</fullName>
    <formula>( Direct_Labour_Cost__c  +  Variable_Cost__c  +  Overhead_Cost_CAD__c ) /  Rate_Pcs_hr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ext Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>