force-app/main/default/objects/Process_Routing__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Machining Operations</fullName>
            </value>
            <value>
                <fullName>Assembly Operations</fullName>
            </value>
            <value>
                <fullName>Quality Control Operations</fullName>
            </value>
            <value>
                <fullName>Packaging Operations</fullName>
            </value>
            <value>
                <fullName>Maintenance Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>