force-app/main/default/objects/Process_Routing__c/fields/Outside_Cost_CAD__c.field-meta.xml
<CustomField>
    <fullName>Outside_Cost_CAD__c</fullName>
    <label>Outside Cost (CAD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>