force-app/main/default/objects/Process_Routing__c/fields/Overhead_Cost_CAD__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Cost_CAD__c</fullName>
    <label>Overhead Cost (CAD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>