force-app/main/default/objects/Process_Routing__c/fields/Quote_Express__c.field-meta.xml
<CustomField>
    <fullName>Quote_Express__c</fullName>
    <label>Quote Express</label>
    <referenceTo>Quote_Express__c</referenceTo>
    <relationshipLabel>Process Routings</relationshipLabel>
    <relationshipName>Process_Routings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>