force-app/main/default/objects/Process_Routing__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Process Routings</relationshipLabel>
    <relationshipName>Process_Routings</relationshipName>
    <type>Lookup</type>
</CustomField>