force-app/main/default/objects/Process_Routing__c/fields/Rate_Pcs_hr__c.field-meta.xml
<CustomField>
    <fullName>Rate_Pcs_hr__c</fullName>
    <label>Rate (Pcs/hr)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>