force-app/main/default/objects/Process_Routing__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industry Directories</fullName>
            </value>
            <value>
                <fullName>Trade Shows</fullName>
            </value>
            <value>
                <fullName>Industry Associations</fullName>
            </value>
            <value>
                <fullName>Online B2B Platforms</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>