force-app/main/default/objects/Process_Routing__c/fields/Variable_Cost__c.field-meta.xml
<CustomField>
    <fullName>Variable_Cost__c</fullName>
    <label>Variable Cost</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>