force-app/main/default/objects/Process_Routing__c/fields/Work_Center__c.field-meta.xml
<CustomField>
    <fullName>Work_Center__c</fullName>
    <label>Work Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Machining Center</fullName>
            </value>
            <value>
                <fullName>Assembly Center</fullName>
            </value>
            <value>
                <fullName>Welding Center</fullName>
            </value>
            <value>
                <fullName>Injection Molding Center</fullName>
            </value>
            <value>
                <fullName>Quality Control Center</fullName>
            </value>
            <value>
                <fullName>Finishing Center</fullName>
            </value>
            <value>
                <fullName>Material Handling Center</fullName>
            </value>
            <value>
                <fullName>Packaging Center</fullName>
            </value>
            <value>
                <fullName>Logistics and Shipping Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>